--- a/Example/PIDatePicker/Main.storyboard
+++ b/Example/PIDatePicker/Main.storyboard
@@ -1,8 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="42N-tQ-fvD">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="42N-tQ-fvD">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -14,44 +19,44 @@
                         <viewControllerLayoutGuide type="bottom" id="IVn-IH-g48"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="r7S-n0-yCC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XUL-K8-ur5" customClass="PIDatePicker" customModule="PIDatePicker">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XUL-K8-ur5" customClass="PIDatePicker" customModule="PIDatePicker">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="212"/>
-                                <color key="backgroundColor" red="0.40000000596046448" green="0.80000001192092896" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.40000000596046448" green="0.80000001192092896" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="212" placeholder="YES" id="EaD-3N-3zS"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xh8-4R-V3E">
-                                <rect key="frame" x="141" y="275" width="155" height="50"/>
+                                <rect key="frame" x="28.5" y="275" width="155" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="40g-TS-b2b"/>
                                     <constraint firstAttribute="width" constant="155" id="ngO-uj-byS"/>
                                 </constraints>
                                 <state key="normal" title="Random Color">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="randomizeColor:" destination="42N-tQ-fvD" eventType="touchUpInside" id="XMP-0r-2yF"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G44-H8-jKp">
-                                <rect key="frame" x="313" y="275" width="146" height="50"/>
+                                <rect key="frame" x="200.5" y="275" width="146" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="146" id="2DL-yJ-bFE"/>
                                     <constraint firstAttribute="height" constant="50" id="gKc-i8-5ad"/>
                                 </constraints>
                                 <state key="normal" title="Random Font">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="randomizeFont:" destination="42N-tQ-fvD" eventType="touchUpInside" id="ods-v7-GVO"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKU-dB-Qgb">
-                                <rect key="frame" x="209" y="345" width="183" height="21"/>
+                                <rect key="frame" x="96.5" y="345" width="183" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="183" id="6J9-av-dMX"/>
                                     <constraint firstAttribute="height" constant="21" id="A2d-DU-ngr"/>
@@ -61,7 +66,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.80000001192092896" green="0.80000001192092896" blue="0.80000001192092896" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.80000001192092896" green="0.80000001192092896" blue="0.80000001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="xh8-4R-V3E" secondAttribute="centerX" constant="146.5" id="8Ap-pJ-ZRh"/>
                             <constraint firstItem="XUL-K8-ur5" firstAttribute="top" secondItem="ZxE-uC-JeZ" secondAttribute="bottom" constant="-20" id="G03-nO-TrM"/>
